--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: cpp
 compiler: clang
 script: make
 sudo: required
+dist: trusty
 before_install:
 - if [ "$TRAVIS_OS_NAME" == "osx" ];   then bash Scripts/travis-osx-before.sh;   fi
 - if [ "$TRAVIS_OS_NAME" == "linux" ]; then bash Scripts/travis-linux-before.sh; fi
