--- a/ULog.xcodeproj/xcshareddata/xcschemes/ULog Example - iOS.xcscheme
+++ b/ULog.xcodeproj/xcshareddata/xcschemes/ULog Example - iOS.xcscheme
@@ -14,9 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "0597E3521DB7E71900E845E9"
-               BuildableName = "Example.app"
-               BlueprintName = "Example"
+               BlueprintIdentifier = "051030AD1DC243CC00BBA893"
+               BuildableName = "ULog Example - iOS.app"
+               BlueprintName = "ULog Example - iOS"
                ReferencedContainer = "container:ULog.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -32,9 +32,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "0597E3521DB7E71900E845E9"
-            BuildableName = "Example.app"
-            BlueprintName = "Example"
+            BlueprintIdentifier = "051030AD1DC243CC00BBA893"
+            BuildableName = "ULog Example - iOS.app"
+            BlueprintName = "ULog Example - iOS"
             ReferencedContainer = "container:ULog.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -55,9 +55,9 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "0597E3521DB7E71900E845E9"
-            BuildableName = "Example.app"
-            BlueprintName = "Example"
+            BlueprintIdentifier = "051030AD1DC243CC00BBA893"
+            BuildableName = "ULog Example - iOS.app"
+            BlueprintName = "ULog Example - iOS"
             ReferencedContainer = "container:ULog.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
@@ -74,9 +74,9 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "0597E3521DB7E71900E845E9"
-            BuildableName = "Example.app"
-            BlueprintName = "Example"
+            BlueprintIdentifier = "051030AD1DC243CC00BBA893"
+            BuildableName = "ULog Example - iOS.app"
+            BlueprintName = "ULog Example - iOS"
             ReferencedContainer = "container:ULog.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
