--- a/VisualStudio/ULog_NET/ULog_NET.csproj
+++ b/VisualStudio/ULog_NET/ULog_NET.csproj
@@ -16,8 +16,8 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\Build\Debug\Products\net\</OutputPath>
-    <BaseIntermediateOutputPath>..\Build\Debug\Intermediates\net\</BaseIntermediateOutputPath>
+    <OutputPath>..\..\Build\Debug\Products\net\</OutputPath>
+    <BaseIntermediateOutputPath>..\..\Build\Debug\Intermediates\net\</BaseIntermediateOutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -25,8 +25,8 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>..\Build\Release\Products\net\</OutputPath>
-    <BaseIntermediateOutputPath>..\Build\Release\Intermediates\net\</BaseIntermediateOutputPath>
+    <OutputPath>..\..\Build\Release\Products\net\</OutputPath>
+    <BaseIntermediateOutputPath>..\..\Build\Release\Intermediates\net\</BaseIntermediateOutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -50,7 +50,7 @@
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PreBuildEvent>rmdir /s /q "$(ProjectDir)CS"
-mklink /J "$(ProjectDir)CS" "$(ProjectDir)..\ULog\source\CS"</PreBuildEvent>
+mklink /J "$(ProjectDir)CS" "$(ProjectDir)..\..\ULog\source\CS"</PreBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
