--- a/VisualStudio/ULog_Static_V120XP.vcxproj
+++ b/VisualStudio/ULog_Static_V120XP.vcxproj
@@ -20,6 +20,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\ULog\source\CXX\CXX-Atomic.cpp" />
+    <ClCompile Include="..\ULog\source\CXX\CXX-CS-Logger.cpp" />
+    <ClCompile Include="..\ULog\source\CXX\CXX-CS-Message.cpp" />
     <ClCompile Include="..\ULog\source\CXX\CXX-Log.cpp" />
     <ClCompile Include="..\ULog\source\CXX\CXX-Logger.cpp" />
     <ClCompile Include="..\ULog\source\CXX\CXX-Message.cpp" />
