--- a/VisualStudio/ULog_DLL_V140XP.vcxproj.filters
+++ b/VisualStudio/ULog_DLL_V140XP.vcxproj.filters
@@ -98,5 +98,11 @@
     <ClCompile Include="..\ULog\source\CXX\CXX-SpinLock.cpp">
       <Filter>Source Files\CXX</Filter>
     </ClCompile>
+    <ClCompile Include="..\ULog\source\CXX\CXX-CS-Message.cpp">
+      <Filter>Source Files\CXX</Filter>
+    </ClCompile>
+    <ClCompile Include="..\ULog\source\CXX\CXX-CS-Logger.cpp">
+      <Filter>Source Files\CXX</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
