--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,6 @@
 language: cpp
 compiler: clang
-script: 
-- make
-- xctool -project "ULog.xcodeproj" -scheme "ULog - Mac Framework" build
-- xctool -project "ULog.xcodeproj" -scheme "ULog - Mac Static Library" build
-- xctool -project "ULog.xcodeproj" -scheme "ULog - iOS Static Library" build
-- xctool -project "Example-Mac.xcodeproj" -scheme "ULog Example - Mac" build
-- xctool -project "Example-iOS.xcodeproj" -scheme "ULog Example - iOS" build
+script: ./Scripts/travis-build.sh
 sudo: required
 dist: trusty
 before_install:
