--- a/.github/workflows/ci-win.yaml
+++ b/.github/workflows/ci-win.yaml
@@ -2,7 +2,7 @@ name: ci-win
 on:   [push]
 jobs:
     ci:
-        runs-on: windows-latest
+        runs-on: windows-2022
         strategy:
             matrix:
                 run-config:
